--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RON to EUR & PLN Rates</title>
-    <meta charset="utf-8" />
+    <title>RON to EUR & PLN</title>
+    <meta charset="UTF-8" />
     <style>
-      body {
+      html, body {
         margin: 0;
+        padding: 0;
+        height: 100%;
         display: flex;
-        justify-content: center;
         align-items: center;
-        height: 100vh;
-        background: #f8f8f8;
+        justify-content: center;
+        background: #f7f7f7;
+      }
+
+      iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+        max-width: 400px;
       }
     </style>
   </head>
   <body>
-    <iframe src="https://currencyrate.today/embed/currency-converter?from=RON&to=EUR,PLN&amount=1" width="400" height="300" frameborder="0"></iframe>
+    <iframe src="https://www.fx-rate.net/widgets/RON/EUR-PLN.php?lang=en" scrolling="no"></iframe>
   </body>
 </html>
